--- a/section/contacto.html
+++ b/section/contacto.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="./historia.html">MI HISTORIA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                        <a class="active nav-link" href="./contacto.html">CONTACTO</a>
                     </li>
                 </ul>
                 <div class="navbar-brand d-none d-lg-block">
