--- a/section/historia.html
+++ b/section/historia.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="../index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./historia.html">MI HISTORIA</a>
+                        <a class="active nav-link" href="./historia.html">MI HISTORIA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contacto.html">CONTACTO</a>
