--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -20,7 +20,7 @@
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html">INICIO</a>
                     </li>
@@ -34,9 +34,9 @@
                 <div class="navbar-brand d-none d-lg-block">
                     <img src="../img/logo.png" alt="logo principal de la empresa" class="nav-logo"> 
                 </div>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="./ilustraciones.html">ILUSTRACIONES</a>
+                        <a class="active nav-link" href="./ilustraciones.html">ILUSTRACIONES</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./grafico.html">GRÁFICA</a>
