--- a/section/grafico.html
+++ b/section/grafico.html
@@ -54,7 +54,7 @@
             <h1 class="hero__grafico--titulo">Gráfico</h1>
         </div>
     </article>
-    <section>
+    <section class="trabajos_grafico">
         <div>
             <h2>Trabajos de Diseño Gráfico</h2>
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -66,24 +66,12 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                     <img src="../img/grafico-gili.jpg" class="d-block w-100" alt="trabajo grafico para gilipollas">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Gilipollas</h5>
-                        <p>Fabrica de boxers</p>
-                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/grafico-kuki.jpg" class="d-block w-100" alt="trabajo grafico para kuki">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Kuki</h5>
-                        <p>Pasteleria y café</p>
-                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/grafico-picky.jpg" class="d-block w-100" alt="trabajo grafico para gilipollas">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Picky Printing</h5>
-                        <p>Taller serigráfico</p>
-                    </div>
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -97,28 +85,28 @@
             </div>
         </div>
     </section>
-    <section>
-        <article>
+    <section class="grafico__video mx-auto">
+        <article class="mx-auto">
             <h2>Gráfico para tu empresa</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
-            <div class="video__container">
+            <div class="video__container mx-auto">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/tHGx6TJEPZs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </article>
     </section>
-    <section>
+    <section class="grafico__empresas">
         <h3>Ellos me eligieron</h3>
-        <div class="grafico__logo--container">
-            <div class="grafico__logo">
+        <div class="grafico__logo--container mx-auto row">
+            <div class="grafico__logo  col-6 col-md-3">
                 <img src="../img/grafico-55.jpg" alt="55 detail shop autopartes">
             </div>
-            <div class="grafico__logo">
+            <div class="grafico__logo  col-6 col-md-3">
                 <img src="../img/grafico-castilla.jpg" alt="isabel de castilla tienda de ropa">
             </div>
-            <div class="grafico__logo">
+            <div class="grafico__logo  col-6 col-md-3">
                 <img src="../img/grafico-crystal.jpg" alt="crystal blue indie games">
             </div>
-            <div class="grafico__logo">
+            <div class="grafico__logo  col-6 col-md-3">
                 <img src="../img/grafico-delirio.jpg" alt="delirio zapateria">
             </div>
         </div>
