--- a/section/ilustraciones.html
+++ b/section/ilustraciones.html
@@ -66,24 +66,12 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                     <img src="../img/ilus-time.jpg" class="d-block w-100" alt="ilustracion de robot">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Timestop Games</h5>
-                        <p>Empresa desarrolladora de videojuegos</p>
-                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/ilus-gili.jpg" class="d-block w-100" alt="ilustracion de personajes varios">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Gilipollas</h5>
-                        <p>Fabrica de boxers</p>
-                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../img/ilus-conan.jpg" class="d-block w-100" alt="ilustracion de vikingo">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Cervezas Conan</h5>
-                        <p>Cerveceria artesanal</p>
-                    </div>
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -97,8 +85,8 @@
             </div>
         </div>
     </section>
-    <section class="ilustraciones__video">
-        <article>
+    <section class="ilustraciones__video mx-auto">
+        <article class="mx-auto">
             <h2>Tu Proyecto animado</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio.</p>
             <div class="video__container mx-auto">
@@ -106,19 +94,19 @@
             </div>
         </article>
     </section>
-    <section>
+    <section class="ilustraciones__empresas">
         <h3>Ellos me eligieron</h3>
-        <div class="ilustraciones__logo--container">
-            <div class="ilustraciones__logo">
+        <div class="ilustraciones__logo--container mx-auto row">
+            <div class="ilustraciones__logo col-6 col-md-3">
                 <img src="../img/logo-Magico.jpg" alt="mundo magico jugueteria">
             </div>
-            <div class="ilustraciones__logo">
+            <div class="ilustraciones__logo col-6 col-md-3">
                 <img src="../img/logo-MrCoco.jpg" alt="mr coco bar">
             </div>
-            <div class="ilustraciones__logo">
+            <div class="ilustraciones__logo col-6 col-md-3">
                 <img src="../img/logo-Wapas.jpg" alt="wapas zapateria">
             </div>
-            <div class="ilustraciones__logo">
+            <div class="ilustraciones__logo col-6 col-md-3">
                 <img src="../img/logo-sabores.jpg" alt="sabores panaderia">
             </div>
         </div>
